--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     outline: none;
 }
 
+/* Added this comment to check how ranches work */
+
 .container {
     width: 100%;
     min-height: 100vh;
